# scribus-plugin-search

./: CMakeLists.txt  README.md  search.cpp  search.h  searchplugin.cpp
src/: search.cpp  search.h  searchplugin.cpp  searchplugin.h
ui/: test.qml
