INCLUDE_DIRECTORIES(
${CMAKE_SOURCE_DIR}
${CMAKE_SOURCE_DIR}/scribus
)

SET(SCRIBUS_EDITSEARCH_PLUGIN_MOC_CLASSES
  src/searchplugin.h
  src/search.h
)

SET(SCRIBUS_EDITSEARCH_PLUGIN_SOURCES
  src/searchplugin.cpp
  src/search.cpp
)

SET(SCRIBUS_EDITSEARCH_PLUGIN "searchplugin")

QT5_WRAP_UI(SCRIBUS_EDITSEARCH_PLUGIN_UI_SOURCES ${SCRIBUS_EDITSEARCH_PLUGIN_UI_SRC} )
QT5_WRAP_CPP(SCRIBUS_EDITSEARCH_PLUGIN_MOC_SOURCES ${SCRIBUS_EDITSEARCH_PLUGIN_MOC_CLASSES})

ADD_LIBRARY(${SCRIBUS_EDITSEARCH_PLUGIN} MODULE ${SCRIBUS_EDITSEARCH_PLUGIN_SOURCES} ${SCRIBUS_EDITSEARCH_PLUGIN_MOC_SOURCES} ${SCRIBUS_EDITSEARCH_PLUGIN_UI_CPP} ${SCRIBUS_EDITSEARCH_PLUGIN_UI_SOURCES})

TARGET_LINK_LIBRARIES(${SCRIBUS_EDITSEARCH_PLUGIN} ${PLUGIN_LIBRARIES})

INSTALL(TARGETS ${SCRIBUS_EDITSEARCH_PLUGIN}
  LIBRARY
  DESTINATION ${PLUGINDIR}
  PERMISSIONS ${PLUGIN_PERMISSIONS}
)

ADD_DEPENDENCIES(${SCRIBUS_EDITSEARCH_PLUGIN} ${EXE_NAME})

# file(COPY main.qml DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )
